--- a/Customer/src/main/resources/application.yaml
+++ b/Customer/src/main/resources/application.yaml
@@ -1,6 +1,21 @@
 spring:
    application:
       name: Customer
+   datasource:
+      driver-class-name: org.postgresql.Driver
+      url: jdbc:postgresql://localhost:5432/customer_db?useSSL=false
+      username: postgres
+      password: pass
+   jpa:
+      show-sql: true
+      hibernate:
+         dialect: org.hibernate.dialect.PostgreSQLDialect
+         ddl-auto: create
+      properties:
+         hibernate:
+            jdbc:
+               lob:
+                  non_contextual_creation: true
    main:
       allow-bean-definition-overriding: true
    zipkin:
@@ -14,5 +29,5 @@ logging:
       root: WARN
       com:
          murali:
-            customer: DEBUG  
+            customer: DEBUG
    
